{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 30,
  "lineage": "f14aa0f1-2559-0d7b-9fa5-f403f8eaea4d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:931122829923:vpc/vpc-0698a4473a27bc51d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c21da9f8ce1b5e8f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0485a37e9a1f5877e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0698a4473a27bc51d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ea7f752345d1a3d0",
            "owner_id": "931122829923",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "staging_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce5d7a1fba783631",
            "arn": "arn:aws:ec2:eu-north-1:931122829923:elastic-ip/eipalloc-0ce5d7a1fba783631",
            "association_id": "eipassoc-0cd62fc5ef08ca122",
            "domain": "vpc",
            "id": "eipalloc-0ce5d7a1fba783631",
            "instance": "i-0f9f4924154773971",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0e8493a99635500c9",
            "private_dns": "ip-172-31-47-138.eu-north-1.compute.internal",
            "private_ip": "172.31.47.138",
            "public_dns": "ec2-16-170-58-32.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.58.32",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "staging_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a4640f53fa171eb4",
            "arn": "arn:aws:ec2:eu-north-1:931122829923:instance/i-0f9f4924154773971",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9f4924154773971",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "storiva-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e8493a99635500c9"
              }
            ],
            "primary_network_interface_id": "eni-0e8493a99635500c9",
            "private_dns": "ip-172-31-47-138.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.138",
            "public_dns": "ec2-51-20-5-212.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.5.212",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7bdbd2d8fb41e54",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "storiva-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07225b4a1cddba961",
            "tags": {
              "Name": "Storiva-Staging-Server"
            },
            "tags_all": {
              "Name": "Storiva-Staging-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0089a63e938d0a49c"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8b1061311263ac4",
            "arn": "arn:aws:ec2:eu-north-1:931122829923:elastic-ip/eipalloc-0f8b1061311263ac4",
            "association_id": "eipassoc-0f37c92c48adc7c6e",
            "domain": "vpc",
            "id": "eipalloc-0f8b1061311263ac4",
            "instance": "i-08f21a26dcabbf56f",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-05cdbeb5e4a93ad6f",
            "private_dns": "ip-172-31-39-63.eu-north-1.compute.internal",
            "private_ip": "172.31.39.63",
            "public_dns": "ec2-51-21-112-7.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.112.7",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a4640f53fa171eb4",
            "arn": "arn:aws:ec2:eu-north-1:931122829923:instance/i-08f21a26dcabbf56f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f21a26dcabbf56f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "storiva-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05cdbeb5e4a93ad6f"
              }
            ],
            "primary_network_interface_id": "eni-05cdbeb5e4a93ad6f",
            "private_dns": "ip-172-31-39-63.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.63",
            "public_dns": "ec2-16-171-43-158.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.43.158",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00999e53276282cb5",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "storiva-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07225b4a1cddba961",
            "tags": {
              "Name": "Storiva-Prod-Server"
            },
            "tags_all": {
              "Name": "Storiva-Prod-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0089a63e938d0a49c"
            ]
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:931122829923:security-group/sg-0b8e0c5b753eb5f7e",
            "description": "Allow inbound PostgreSQL traffic from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8e0c5b753eb5f7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0089a63e938d0a49c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "storiva-rds-sg",
            "name_prefix": "",
            "owner_id": "931122829923",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0698a4473a27bc51d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:931122829923:security-group/sg-0089a63e938d0a49c",
            "description": "Allow inbound traffic for Storiva environments",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0089a63e938d0a49c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "storiva-server-sg",
            "name_prefix": "",
            "owner_id": "931122829923",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0698a4473a27bc51d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}